# Zend

./: .gitignore  README.md  main.cpp
docs/: RM.md  bom.xls
led-strip-driver/: README.md  led.py  main.js  main.py  package-lock.json  package.json  test.js  test.py
led-strip-driver/src/: led.py
pi_code/cpp/: main.cpp  serialHandler.h
pi_code/python/: functions.py  sand_table.py  sender.py
pi_pythonCode/: functions.py  sand_table.py
sandtable-package/: LICENSE  README.md  pyproject.toml  setup.cfg
sandtable-package/src/sandtable_package_zend/: functions.py  main.py  sender.py
sandtable-package/src/vives_sandtable_package_zend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: figure.cpp  figure.h  figures.cpp  figures.h  sandTable.cpp  sandTable.h  stepMotor.cpp  stepMotor.h
webinterface/: README.md  docker-compose.yml  package-lock.json  package.json
webinterface/client/: index.html  script.js
webinterface/client/css/: style.css
webinterface/server/: functions.py  main.py  sand_table.py  sender.py
webinterface/static/client/: Dockerfile  index.html  script.js
webinterface/static/client/css/: style.css
